[package]
name = "rssmission"
version = "0.1.0"
authors = ["Marek Veselý <veselym@spstrutnov.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transmission-rpc = "0.3.3"
rss = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
ring = "0.16.20"
data-encoding = "2.3.2"
tokio = { version = "1", features = ["full", "macros"] }